feat: implement user authentication system with registration, login, and query history tracking